# fastapi-beanie

./: hello.py  pyproject.toml
app/server/: app.py  config.py  database.py  schemas.py  users.py
app/server/models/: product_review.py
app/server/routes/: product_review.py
