[project]
name = "fastapi-beanie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.29.0",
    "fastapi>=0.115.6",
    "fastapi-users[beanie]>=14.0.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "uvicorn[standard]>=0.34.0",
]
